sandbox/output
Patient.java:53: error: incompatible types: possible lossy conversion from long to int
        return startA.until(endB, ChronoUnit.DAYS);
                           ^
1 error
